--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!-- CSS LINKS -->
+    <link rel="stylesheet" href="styles.css">
+    <title>Todo APP</title>
 </head>
 <body>
     <div class="main">
         <form class="form">
             <input type="text" class="todo" placeholder="introduce a todo">
-            <input type="submit" value="add todo" class="btn">
+            <input type="submit" value="add todo" class="add-btn">
         </form>
 
-        <ul class="list">
-        </ul>
+        <ul class="list"></ul>
     </div>
 
 
