--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 </head>
 <body>
     <div class="main">
+        <h1 class="title">todo list</h1>
         <form class="form">
-            <input type="text" class="todo" placeholder="introduce a todo">
+            <input type="text" class="todo" placeholder="enter todo">
             <input type="submit" value="add todo" class="add-btn">
         </form>
 
